# distributed-job-platform-

./: .env  Cargo.toml
services/auth-service/: Cargo.toml
services/auth-service/src/: app_state.rs  main.rs
services/auth-service/src/api/: mod.rs
services/auth-service/src/api/dto/: forgot_password_request.rs  login_request.rs  login_response.rs  logout_all_request.rs  logout_request.rs  mod.rs  profile_response.rs  refresh_token_request.rs  refresh_token_response.rs  register_request.rs  register_response.rs  reset_password_request.rs  send_verification_request.rs  session_response.rs  user_request.rs  verify_email_request.rs
services/auth-service/src/api/handlers/: auth_handler.rs  health_handler.rs
services/auth-service/src/api/response/: api_response.rs
services/auth-service/src/application/: auth_service.rs
services/auth-service/src/auth/: claims.rs  current_user.rs  current_user_extractor.rs  jwt.rs  mod.rs  password.rs  role_guard.rs  roles.rs  token_hash.rs
services/auth-service/src/config/: app_config.rs
services/auth-service/src/domain/: email_verification.rs  mod.rs  password_reset_token.rs  refresh_token.rs  role.rs  session.rs  user.rs
services/auth-service/src/errors/: app_error.rs
services/auth-service/src/middleware/: auth_middleware.rs  mod.rs
services/auth-service/src/openapi/: docs.rs
services/auth-service/src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  role_repository.rs  session_repository.rs  user_repository.rs
services/job-service/: Cargo.toml
(+42 files in other folders)
