[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]

argon2 = { version = "0.5", features = ["password-hash", "rand"] }

axum = "0.8"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

dotenvy = "0.15"


sqlx = { version = "0.8", features = [
     "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros"
] }

thiserror = "2"

tracing = "0.1"

tracing-subscriber = "0.3"
utoipa = { version = "5", features = ["chrono", "uuid"] }

utoipa-swagger-ui = { version = "9", features = ["axum"] }
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9"

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"